--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
-    "nuxt3": "latest"
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.3.7",
+    "nuxt3": "latest",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.17"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.1",
+    "@heroicons/vue": "^1.0.4",
+    "nuxt-windicss": "^2.0.3",
     "vue": "^3.2.20"
   }
 }
